--- a/certifications.html
+++ b/certifications.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="card" style="width:400px">
-            <img class="card-img-top" src="/assets/img/certi1.png" alt="Card image" style="width:350px; height: 200px;">
+            <img class="card-img-top" src="assets/img/certi1.png" alt="Card image" style="width:350px; height: 200px;">
             <div class="card-body">
               <h4 class="card-title">Date: 03/03/2021</h4>
               <p class="card-text">Acquired hands-on experience in developing and maintaining an AWS-based application</p>
@@ -90,7 +90,7 @@
           </div>
            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="card" style="width:400px">
-            <img class="card-img-top" src="/assets/img/certi2.png" alt="Card image" style="width:350px; height: 200px;">
+            <img class="card-img-top" src="assets/img/certi2.png" alt="Card image" style="width:350px; height: 200px;">
             <div class="card-body">
               <h4 class="card-title">Date: 09/09/2020</h4>
               <p class="card-text">Acquired hands-on experience in developing and maintaining an Salesforce platform application</p>
@@ -99,7 +99,7 @@
           </div>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="card" style="width:400px">
-            <img class="card-img-top" src="/assets/img/certif3.png" alt="Card image" style="width:100%; height: 200px">
+            <img class="card-img-top" src="assets/img/certif3.png" alt="Card image" style="width:100%; height: 200px">
             <div class="card-body">
               <h4 class="card-title">Date: 05/03/2020</h4>
               <p class="card-text">Acquired hands-on experience in developing and maintaining an Java-based application</p>
