--- a/recommendations.html
+++ b/recommendations.html
@@ -106,15 +106,15 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="/assets/img/Screen Shot 2022-02-24 at 6.32.33 PM.png" alt="Los Angeles" >
+          <img src="assets/img/Screen Shot 2022-02-24 at 6.32.33 PM.png" alt="Los Angeles" >
         </div>
   
         <div class="item">
-          <img src="/assets/img/Screen Shot 2022-02-24 at 6.32.42 PM.png" alt="Chicago" >
+          <img src="assets/img/Screen Shot 2022-02-24 at 6.32.42 PM.png" alt="Chicago" >
         </div>
       
         <div class="item">
-          <img src="/assets/img/Screen Shot 2022-02-24 at 6.32.50 PM.png" alt="New york" >
+          <img src="assets/img/Screen Shot 2022-02-24 at 6.32.50 PM.png" alt="New york" >
         </div>
       </div>
   
