--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">Skills</a></li>
+          <li><a href="skills.html">Skills</a></li>
           <li><a href="recommendations.html">Recommendations</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="certifications.html">Certifications</a></li>
